--- a/modules/ROOT/pages/6.7-release-notes.adoc
+++ b/modules/ROOT/pages/6.7-release-notes.adoc
@@ -91,7 +91,11 @@ The {productname} 6.7.0 release includes an accompanying release of the **Checkl
 
 ==== Applying checklist on a list with nested lists turned only the outer list into a checklist
 // TINY-9998
+In previous versions of {productname}, an issue was identified that affected the functionality of the xref:checklist.adoc[Checklist] Plugin when user's would select a checklist that contains a nested checklist and attempted to convert it into a bulleted list or a numbered list.
 
+As a consequence, the outer checklist would be converted into the desired list while the nested checklists retained the previous formatting state.
+
+{productname} 6.7 addressed this issue, by ensuring that the whole checklist is now converted into the desired list selected by the user which includes nested checklist.
 
 
 === Comments 3.3.3
@@ -150,7 +154,13 @@ The {productname} 6.7.0 release includes an accompanying release of the **PowerP
 
 ==== Stopped pasting comments from word documents.
 // TINY-9975
+Previously, pasting content from a word document that contained comments were copied alongside the document's content, resulting in the unintended inclusion of comments when pasting it into a {productname} document.
 
+{productname} 6.7, introduced a solution for xref:introduction-to-powerpaste.adoc[PowerPaste] that now excludes comments when pasting data into a {productname} document.
+
+As a result of this fix, users can now paste content from Word documents without the inconvenience of comments being inadvertently included in the paste operation.
+
+For information on the **PowerPaste** plugin, see: xref:introduction-to-powerpaste.adoc[PowerPaste].
 
 ==== Removed translations for an error which no longer occurs.
 // TINY-10045
@@ -287,6 +297,13 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 
 === Applying an ordered or unordered list to a selected checklist incorrectly turned the list into paragraphs
 // TINY-9975
+In previous versions of {productname}, an issue was identified that affected the functionality of the xref:checklist.adoc[Checklist] Plugin which would incorrectly convert a list into a paragraph when users attempted to apply an `ordered` or `unordered` list format to a selected checklist, particularly when they selected a bulleted list that included a sublist.
+
+{productname} 6.7 addresses this issue so that when a user selects a bulleted list that contains a sublist and tries to convert it into a checklist, the entire list correctly transforms into a checklist as intended.
+
+As a result of this fix, lists will now longer convert into paragraphs when attempting to apply checklist formatting to them.
+
+For information on the **Checklist** plugin, see: xref:checklist.adoc[Checklist].
 
 === Returning an empty string in a custom context menu update function resulted in a small white line appearing on right-click and the browser-native context menu would not present
 // TINY-9842
