--- a/modules/ROOT/pages/6.7-release-notes.adoc
+++ b/modules/ROOT/pages/6.7-release-notes.adoc
@@ -232,7 +232,7 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 
 
 [[improvements]]
-== Improvments
+== Improvements
 
 === Adding a newline after a table would, in some specific cases, not work
 // TINY-9863
@@ -251,7 +251,15 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 
 === Improved the keyboard focus visibility for links inside dialogs
 // TINY-10124
+Previously, when a link was rendered within a {productname} dialog, it was difficult for a user to identify the visual difference between `normal, hovered` or `focused` when rendered inside the body content of a dialog such as the help dialog.
 
+As a consequence, when the user hovered or focused on the link using keyboard navigation, the distinction between the state modes was almost unnoticeable to the user.
+
+{productname} 6.7 addresses this issues by, adding a underline to all links;
+* improving the default color contrast;
+* and adding an outline to the link when using the keyboard.
+
+As a result, when the state of a links changes, the user will now, immediately be able to identify when the element within the dialog has keyboard focus.
 
 
 [[additions]]
