--- a/modules/ROOT/pages/6.7-release-notes.adoc
+++ b/modules/ROOT/pages/6.7-release-notes.adoc
@@ -245,6 +245,16 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 
 === Where multiple case sensitive variants of a translation key are provided, they will now all be preserved in the translation object instead of just the lowercase variant
 // TINY-10115
+A issue was identified in {productname} 6.6, that occurred because the editor initially converted all translation keys to lowercase when adding them to its internal translations object.
+
+As a consequence, when providing multiple case-sensitive variants of a translation key, only one key-value pair was retained in the internal object. This meant that case-sensitive translations were not supported, and **"test"** and **"Test"** could not have different translation values.
+
+{productname} 6.7 addressed these issues with the following changes:
+
+. When you specify a lowercase variant of a translation key, all case-sensitive variants are now preserved in the internal object.
+. If you don't specify a lowercase variant, a lowercase translation key is created using the value of the last encountered variant when checking through the user-defined translations object.
+
+This update effectively supports case-sensitive translations while ensuring that case insensitivity is maintained, as there is always a lowercase version of a translation key available.
 
 === Improved screen reader announcements of the column and row selection in the grid presented by the **Table** menu and toolbar item
 // TINY-10140
