--- a/modules/ROOT/pages/6.7-release-notes.adoc
+++ b/modules/ROOT/pages/6.7-release-notes.adoc
@@ -236,6 +236,13 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 
 === Adding a newline after a table would, in some specific cases, not work
 // TINY-9863
+Previously, when pressing `Enter` after placing the cursor between a table, and a `contenteditable="false"` element, that is also wrapped within a `div` would in some cases, not add a new line to the {productname} document.
+
+As a consequence, when a `contenteditable="false"` element was situated within the {productname} document, and after a table element, it was considered to be invalid to add a newline at that position, hence, one was not added.
+
+{productname} 6.7 addresses this issues, which now, consider's the position valid, and adds the expected root blocks.
+
+As a result, newlines are added to the {productname} document, as expected when the cursor is between a table, and a `contenteditable="false"` element wrapped in a `div`.
 
 === Menus now have a slight margin at the top and bottom to more clearly separate them from the frame edge
 // TINY-9978
